pgld (2.0~pre1-1) unstable; urgency=low

  * transition to pgld at peerguardian.sourceforge.net
  * removed debian/cron*, debian/init.d and debian/postrm. This is covered by
    pglcmd.
  * Debian packaging:
    - depend on debhelper version 6, added debian/compat, removed DH_COMPAT from
      rules
    - bumped Standards-Version to 3.8.3.0
    - postinst: do "set -e" separately
    - rules: don't ignore errors on "clean"
    - updated description
    - control: added Uploaders (jre), Bugs (mailto jre), Homepage, Vcs-Browser
      and Vcs-Git fields.

  [Cade Robinson]
  * fixed up logging
  * removed "--no-syslog" and rather use "-s" to enable syslogging
  * removed "--no-dbus" and rather use -d to enable dbus
  * added logging to log file
  * moved closelog (for syslogging) to just before the program exit so we can
    log up to the end of running
  * Changed hit lines to use "||" since descriptions in block file had "|" in
    them.
  * Change order of start up to make sure daemon starts correcly and returns if
    it started correctly
  * Changed to have just a ASCII parse and binary parse
  * changed logrotate to reset stats and reload pgld to open new logfile

 -- jre <jre-phoenix@users.sourceforge.net>  Thu, 22 Oct 2009 23:02:37 +0200

nfblock (0.6.2-1) unstable; urgency=low

  * New upstream release
  * blocklistpro.com downloader update

 -- Jindrich Makovicka <makovick@gmail.com>  Sun, 08 Mar 2009 10:24:42 +0100

nfblock (0.6.1-1) unstable; urgency=low

  * New upstream release
  * download list from blocklistpro.com
  * finish the nfblockd -> nfblock transition in update scripts

 -- Jindrich Makovicka <makovick@gmail.com>  Wed, 31 Dec 2008 16:40:21 +0100

nfblock (0.6-1) unstable; urgency=low

  * New upstream release
  * D-Bus support
  * Conversion of range description character sets

 -- Jindrich Makovicka <makovick@gmail.com>  Sat, 13 Sep 2008 12:03:03 +0200

nfblock (0.5-1) unstable; urgency=low

  * New upstream release
  * Proper PID file support